# morpho-directed-growth

./: pyproject.toml
notebooks/: single_shape.ipynb
scripts/: generate_shapes.py  test_nca.py
src/: utils.py
src/dataset/: emoji.py  morphologies.py
src/model/: nca.py
src/nn/: ca.py  perception.py  update.py
src/visualisation/: utils.py
